[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://art/characters_packed.png" type="Texture" id=2]
[ext_resource path="res://sfx/food.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/impact.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/ladder.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/step.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.5, 9 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
frames = SubResource( 4 )
animation = "idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 6 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="FoodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[node name="LadderSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="StepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Sound"
